--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+diesel = { version = "1.4.4", features = ["postgres"] }
+diesel-derive-enum = { version = "0.4", features = ["postgres"] }
+dotenv = "0.15.0"
